<resources>
    <string name="app_name">Story App</string>
    <string name="email">Email</string>
    <string name="error_email">Format email tidak sesuai</string>
    <string name="error_name">Nama harus diisi</string>
    <string name="error_password">Panjang password 6 karakter</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="login">Login</string>
    <string name="ask_have_account">Belum punya akun?</string>
    <string name="register_now">Daftar Sekarang!</string>
    <string name="success_registration">Registrasi Berhasil</string>
    <string name="more">…selengkapnya</string>
    <string name="open_camera">Kamera</string>
    <string name="upload_file">Upload file</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="description">Deskripsi</string>
    <string name="preview_image">Preview Gambar</string>
    <string name="gallery">Gallery</string>
    <string name="preview">Preview</string>
    <string name="error_caption">Deskripsi harus diisi</string>
    <string name="rotate">Rotasi</string>
    <string name="settings">Pengaturan</string>
    <string name="story_detail">Detail Story</string>
    <string name="picture_unavailable">Gambar tidak tersedia</string>
    <string name="choose_a_picture">Pilih Gambar</string>
    <string name="can_not_receive_permission">Tidak mendapatkan permission</string>
    <string name="failed_to_start_camera">Gagal menjalankan kamera</string>
    <string name="failed_to_take_picture">Gagal mengambil gambar</string>
    <string name="failed_to_create_story">Gagal membuat story</string>
    <string name="success_to_create_story">Story berhasil dibuat</string>
    <string name="welcome">Selamat datang %1$s!</string>
    <string name="language">Bahasa</string>
    <string name="logout">logout</string>
    <string name="no_data">Tidak ada data</string>
    <string name="restart_to_change_language">Mulai ulang aplikasi untuk mengganti bahasa</string>
    <string name="appwidget_text">Banner Story</string>
    <string name="explore">Jelajahi</string>
    <string name="normal_type">Normal</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="retry">Ulangi</string>
    <string name="please_turn_on_gps">Anda harus mengaktifkan GPS!</string>
    <string name="last_location_is_null">Lokasi terakhir tidak ditemukan</string>
</resources>