<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/story_detail_toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.StoryDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/story_detail_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/ic_baseline_image" />

            <TextView
                android:id="@+id/name_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/full_desc_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                tools:text="@string/error_password" />

            <TextView
                android:id="@+id/time_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                tools:text="@string/error_email" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
