<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="4dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/story_img"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:transitionName="picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_image" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:transitionName="name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/story_img"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/small_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:transitionName="desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_tv"
            tools:text="@string/error_email" />

        <TextView
            android:id="@+id/more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="0dp"
            android:paddingEnd="24dp"
            android:text="@string/more"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@id/small_desc_tv"
            app:layout_constraintTop_toTopOf="@id/small_desc_tv" />

        <LinearLayout
            android:id="@+id/expanded_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/small_desc_tv">

            <TextView
                android:id="@+id/full_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/error_password" />

        </LinearLayout>

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:transitionName="time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expanded_layout"
            tools:text="@string/error_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>